--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve showcase --port 4200",
+    "start": "ng serve showcase --host 0.0.0.0 --port 4200",
     "start:showcase": "ng serve showcase --port 4201",
     "build": "ng build showcase",
     "build:showcase": "ng build showcase",
